# time-experiment

./: .gitignore  AGENTS.md  DESIGN.md  README.md  pyproject.toml
docs/: analysis_k_spec.md  findings.md  readout_findings.md
scripts/: 00_corpus.py  00_gen_corpus.py  01_natural.py  10_capture.py  10_emit.py  11_gen_capture.py  12_reverbal.py  20_fit_manifold.py  20_probe.py  21_layer_probe_compare.py  30_decode.py  30_felt.py  40_geometry.py  40_transfer.py  41_inflation.py  42_intermittent.py  50_figures.py  50_generation.py  60_naturalistic.py  60_steer.py  61_whiten_natural.py  62_behavior_dissociation.py  62_elicit_capture.py  63_elicit_analyze.py  64_verbal_target.py  65_elicit_figures.py  66_elicit_aim_figures.py  67_natural_elicit_figure.py  70_generate.py  71_gen_time.py  90_figures.py  91_grabbag.py  92_form_selection.py  93_readout_fingerprint.py
tests/: test_analysis_synthetic.py  test_durations.py  test_logic.py
time_experiment/: __init__.py  analysis.py  capture.py  config.py  durations.py  storage.py  transcripts.py
