[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "time-experiment"
version = "0.0.1"
description = "Probing how LLMs represent elapsed conversational time."
requires-python = ">=3.12"
dependencies = [
    "transformer-experiments>=0.1,<0.2",
    "numpy",
    "saklas>=1.4.6",
    "scipy",
    "scikit-learn",
    "torch",
    # saklas is also developed locally when needed:
    #   pip install -e ../../saklas
    #   pip install -e .
]

[tool.setuptools.packages.find]
include = ["time_experiment*"]
